<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context="com.example.silver.ungdungdocsach.activity.MainActivity">


    <Button

        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="12dp"
        android:background="@drawable/dinhdang"
        android:text="@string/doc_truyen"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_marginBottom="17dp"
        android:background="@drawable/dinhdang"
        android:text="@string/gop_y"
        android:textColor="#ffffff"
        android:layout_marginTop="-5dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="@drawable/dinhdang"
        android:text="@string/tai_ung_dung"
        android:textColor="#ffffff"
        android:layout_marginTop="-7dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@drawable/dinhdang"
        android:text="@string/thoat"
        android:layout_marginTop="-12dp"
        android:textColor="#ffffff"
        android:textSize="25sp" />
</RelativeLayout>
